Reapply "fix: remove horizontal scrolling"
This reverts commit 496c2a52408b32fdf730f5f93d7d124a534f140b.

--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -10,7 +10,6 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
   height: 80px;
   display: grid;
   grid-template-columns: 1fr 8fr 1fr;
